fix weather get error